--- a/src/Styles/GlobalStyle.scss
+++ b/src/Styles/GlobalStyle.scss
@@ -1,4 +1,13 @@
 @import "./utilities";
+@import "./navbar";
+@import "./home";
+@import "./circle";
+@import "./products";
+@import "./product";
+@import "./loading";
+@import "./productDetails";
+@import "./singleProductDetails";
+@import "./quantityButton";
 
 *{
     padding: 0;
@@ -22,4 +31,38 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover{
     background: #555; 
+}
+
+.primaryBtn{
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    border: 1px solid $blue;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: $blue;
+    border-radius: 5px;
+    @include transition();
+    z-index: 22;
+    &:hover{
+        background-color: darken($blue, 20%);
+    }
+}
+.secondaryBtn{
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    color: $blue;
+    border: 1px solid $blue;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: transparent;
+    @include transition();
+    &:hover{
+        background-color: darken(white, 10%);
+    }
+}
+
+a{
+    text-decoration: none;
 }
