--- a/src/Styles/GlobalStyle.scss
+++ b/src/Styles/GlobalStyle.scss
@@ -8,6 +8,10 @@
 @import "./productDetails";
 @import "./singleProductDetails";
 @import "./quantityButton";
+@import "./cart";
+@import "./cartProduct";
+@import "./about";
+@import "./contact";
 
 *{
     padding: 0;
@@ -38,7 +42,6 @@
     font-size: 1.2rem;
     border: 1px solid $blue;
     color: white;
-    font-weight: bold;
     cursor: pointer;
     background-color: $blue;
     border-radius: 5px;
@@ -53,7 +56,6 @@
     font-size: 1.2rem;
     color: $blue;
     border: 1px solid $blue;
-    font-weight: bold;
     border-radius: 5px;
     cursor: pointer;
     background-color: transparent;
