--- a/src/Styles/_products.scss
+++ b/src/Styles/_products.scss
@@ -1,7 +1,7 @@
 .products{
     width: 100%;
     min-height: calc(100vh - 70px);
-    background-color: pink;
+    background-color: lighten($pink, 10%);
     @include flexColumn();
     justify-content: flex-start;
     padding-top: 40px;
@@ -9,6 +9,7 @@
         font-weight: bold;
         margin-bottom: 20px;
         font-size: 3rem;
+        color: white;
     }
     .productsCategoryContainer{
         width: 100%;
@@ -33,6 +34,10 @@
 
 @media (max-width: 800px) {
     .products{
+        .productsTitle{
+            font-size: 2.5rem;
+            text-align: center;
+        }
         .productsCategoryContainer{
             @include flexColumn();
             .primaryBtn{
