--- a/src/Styles/_singleProductDetails.scss
+++ b/src/Styles/_singleProductDetails.scss
@@ -29,6 +29,7 @@
         .singleProductTitle{
             margin-bottom: 20px;
             font-size: 2.5rem;
+            color: $grey;
         }
         .singleProductDesc{
             margin-bottom: 20px;
