--- a/src/Styles/_cart.scss
+++ b/src/Styles/_cart.scss
@@ -1,7 +1,7 @@
 .cart{
     width: 100%;
     min-height: calc(100vh - 70px);
-    background-color: pink;
+    background-color: lighten($pink, 20%);
     @include flexCenter();
     align-items: flex-start;
     .cartLeft{
@@ -12,7 +12,7 @@
         justify-content: flex-start;
         .myCart{
             margin-bottom: 20px;
-            color: $grey;
+            color: white;
         }
     }
     .cartRight{ 
