--- a/src/Styles/_products.scss
+++ b/src/Styles/_products.scss
@@ -1,10 +1,10 @@
 .products{
     width: 100%;
     min-height: calc(100vh - 70px);
-    background-color: lighten($pink, 10%);
+    background-color: lighten($pink, 20%);
     @include flexColumn();
     justify-content: flex-start;
-    padding-top: 40px;
+    padding: 40px 0;
     .productsTitle{
         font-weight: bold;
         margin-bottom: 20px;
