--- a/src/Styles/_home.scss
+++ b/src/Styles/_home.scss
@@ -1,24 +1,87 @@
 .home{
     width: 100%;
-    height: calc(100vh - 70px);
+    min-height: calc(100vh - 70px);
     background-color: lighten($pink, 20%);
     overflow: hidden;
     @include flexColumn();
     position: relative;
     color: white;
-    padding: 0 20px;
+    padding: 20px;
     .homeTitle{
         text-transform: uppercase;
         font-size: 5rem;
-        margin-bottom: 50px;
+        margin-bottom: 40px;
         text-align: center;
+        z-index: 22;
     }
     .homeMiniTitle{
         text-transform: uppercase;
         font-size: 3rem;
         font-weight: lighter;
-        margin-bottom: 50px;
+        margin-bottom: 40px;
         text-align: center;
+    }
+    .productsContainer{
+        width: 100%;
+        height: auto;
+        margin-top: 20px;
+        padding: 20px;
+        @include flexCenter();
+        .swiper-slide{
+            width: 200px;
+            height: 300px;
+            @include flexColumn();
+            justify-content: flex-start;
+            .imageContainer{
+                width: 100%;
+                height: 200px;
+                border-radius: 10px;
+                background-color: white;
+                overflow: hidden;
+                position: relative;
+                @include flexCenter();
+                .contentContainer{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;                    
+                    display: none;
+                    .homeIconContainer{
+                        @include flexCenter();
+                        padding: 10px;
+                        background-color: $pink;
+                        color: white;
+                        border-radius: 50%;
+                        cursor: pointer;
+                        margin: 20px;
+                        transition: all .5s ease-in-out;
+                        &:hover{
+                            transform: scale(1.1);
+                            background-color: $blue;
+                        }
+
+                    }
+                }
+                &:hover .contentContainer{
+                    background-color: rgba(0,0,0,0.2);
+                    @include flexCenter();
+                }
+                .productImage{
+                    width: 70%;
+                    height: 70%;
+                    object-fit: contain;
+                }
+            }
+            .title{
+                color: $grey;
+                margin-top: 20px;
+                text-align: center;
+                font-size: 1.2rem;
+            }
+        }
+        
+
     }
 }
 
