--- a/src/Styles/_loading.scss
+++ b/src/Styles/_loading.scss
@@ -102,6 +102,31 @@
     }
 }
 
+.homeLoading{
+    width: 200px;
+    height: 300px;
+    @include flexColumn();
+    justify-content: flex-start;
+    .homeLoadingImage{
+        background-color: $grey;
+        animation: skeleton 1s ease-in-out infinite alternate;
+        width: 100%;
+        height: 200px;
+        border-radius: 10px;
+    }
+    .homeLoadingTitle{
+        background-color: $grey;
+        animation: skeleton 1s ease-in-out infinite alternate;
+        margin-top: 20px;
+        width: 100%;
+        height: 20px;
+        border-radius: 10px;
+
+
+    }
+}
+
+
 
 @keyframes skeleton {
     to {
