--- a/src/Styles/_productDetails.scss
+++ b/src/Styles/_productDetails.scss
@@ -1,5 +1,5 @@
 .productDetails{
     width: 100%;
     height: calc(100vh - 70px);
-    background: pink;
+    background-color: lighten($pink, 20%);
 }
