--- a/src/Styles/GlobalStyle.css
+++ b/src/Styles/GlobalStyle.css
@@ -254,7 +254,7 @@
           flex-direction: column;
   position: relative;
   color: white;
-  padding: 20px;
+  padding: 10px 0;
 }
 
 .home .homeTitle {
@@ -273,11 +273,11 @@
   text-align: center;
 }
 
-.home .productsContainer {
+.home .swiper {
   width: 100%;
-  height: auto;
-  margin-top: 20px;
-  padding: 20px;
+  margin-top: 30px;
+  padding: 0 30px;
+  padding-bottom: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -289,8 +289,20 @@
           justify-content: center;
 }
 
-.home .productsContainer .swiper-slide {
-  width: 200px;
+.home .swiper .swiper-button-next {
+  position: absolute;
+  right: 0;
+  top: 100px;
+}
+
+.home .swiper .swiper-button-prev {
+  position: absolute;
+  left: 0;
+  top: 100px;
+}
+
+.home .swiper .swiper-slide {
+  width: 300px;
   height: 300px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -310,7 +322,7 @@
           justify-content: flex-start;
 }
 
-.home .productsContainer .swiper-slide .imageContainer {
+.home .swiper .swiper-slide .imageContainer {
   width: 100%;
   height: 200px;
   border-radius: 10px;
@@ -328,7 +340,7 @@
           justify-content: center;
 }
 
-.home .productsContainer .swiper-slide .imageContainer .contentContainer {
+.home .swiper .swiper-slide .imageContainer .contentContainer {
   position: absolute;
   top: 0;
   left: 0;
@@ -337,7 +349,7 @@
   display: none;
 }
 
-.home .productsContainer .swiper-slide .imageContainer .contentContainer .homeIconContainer {
+.home .swiper .swiper-slide .imageContainer .contentContainer .homeIconContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -357,13 +369,13 @@
   transition: all .5s ease-in-out;
 }
 
-.home .productsContainer .swiper-slide .imageContainer .contentContainer .homeIconContainer:hover {
+.home .swiper .swiper-slide .imageContainer .contentContainer .homeIconContainer:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
   background-color: #0d6efd;
 }
 
-.home .productsContainer .swiper-slide .imageContainer:hover .contentContainer {
+.home .swiper .swiper-slide .imageContainer:hover .contentContainer {
   background-color: rgba(0, 0, 0, 0.2);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -376,14 +388,14 @@
           justify-content: center;
 }
 
-.home .productsContainer .swiper-slide .imageContainer .productImage {
+.home .swiper .swiper-slide .imageContainer .productImage {
   width: 70%;
   height: 70%;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
-.home .productsContainer .swiper-slide .title {
+.home .swiper .swiper-slide .title {
   color: #313131;
   margin-top: 20px;
   text-align: center;
