--- a/src/Styles/_home.scss
+++ b/src/Styles/_home.scss
@@ -6,7 +6,7 @@
     @include flexColumn();
     position: relative;
     color: white;
-    padding: 20px;
+    padding: 10px 0;
     .homeTitle{
         text-transform: uppercase;
         font-size: 5rem;
@@ -21,14 +21,24 @@
         margin-bottom: 40px;
         text-align: center;
     }
-    .productsContainer{
+    .swiper{
         width: 100%;
-        height: auto;
-        margin-top: 20px;
-        padding: 20px;
+        margin-top: 30px;
+        padding: 0 30px;
+        padding-bottom: 40px;
         @include flexCenter();
+        .swiper-button-next{
+            position: absolute;
+            right: 0;
+            top: 100px;
+        }
+        .swiper-button-prev{
+            position: absolute;
+            left: 0;
+            top: 100px;
+        }
         .swiper-slide{
-            width: 200px;
+            width: 300px;
             height: 300px;
             @include flexColumn();
             justify-content: flex-start;
