--- a/src/Styles/_contact.scss
+++ b/src/Styles/_contact.scss
@@ -27,6 +27,7 @@
             .icon{
                 margin-right: 10px;
                 cursor: pointer;
+                z-index: 22;
                 color: $grey;
                 &:hover{
                     color: black;
